# wtii-cpp

./: .gitignore  CMakeLists.txt  CompilerException.h  ProgramExitException.h  README.md  RuntimeException.h  Scope.h  Utils.cpp  Utils.h  library.cpp  library.h  main.cpp
Builtins/: BuiltIns.cpp  BuiltIns.h
Builtins/Functions/: Convert.cpp  Convert.h  Files.cpp  Files.h  IO.cpp  IO.h  Standard.cpp  Standard.h  WtiiJson.cpp  WtiiJson.h
Compiler/: Compiler.cpp  Compiler.h
Interpreter/: Interpreter.cpp  Interpreter.h
LIbraries/: IWtiiLibrary.h
Libraries/: WtiiLibraryFactory.cpp  WtiiLibraryFactory.h
ParsedScripts/: ClassDefinition.h  ParsedScript.h
ParsedScripts/Statements/: EnterScopeStatement.h  ExitScopeStatement.h  FunctionCallStatement.h  IfStatement.h  LoadLibStatement.h  MethodDefinitiionStatement.h  ReturnStatement.h  Statement.h  ThrowStatement.h  TryCatchStatement.h  VariableInitStatement.h  VariableSetStatement.h  WhileStatement.h
ParsedScripts/Values/: ArrayValue.h  ClassInstance.h  Constant.h  DirectMethod.h  MethodCall.h  RealReference.h  Value.h  Variable.h
Parser/: Parser.cpp  Parser.h
Testing/: TestFailedException.h  TestMethods.h  UnitTester.cpp  UnitTester.h
Testing/Tests/: UtilsTest.h
nlohmann/: json.hpp
